--- a/app/views/pages/homeadm.ejs
+++ b/app/views/pages/homeadm.ejs
@@ -25,7 +25,7 @@
         <a href="/blogadm">Blog</a>
         <a href="/denuncias">Denúncias</a>
         <a href="/avaliacaoadm">Avaliações</a>
-        <a href="/estatistica">Estatísticas</a>
+        <a href="/estatisticaadm">Estatísticas</a>
         <a href="/vistoriaprodutos">Produtos</a>
     </nav>
       <section class="search-profile">
@@ -95,6 +95,10 @@
                 <li>
                   <a href="/blogadm"><img src="imagens/blog.svg" class="icones" alt="Blog"></a>
                   Blog
+                </li>
+                <li>
+                  <a href="/estatisticaadm"><img src="imagens/estatistica.png" class="icones" alt="Estatísticas"></a>
+                  Estatísticas
                 </li>
               </ul>
             </aside>
