--- a/app/views/pages/blog.ejs
+++ b/app/views/pages/blog.ejs
@@ -191,5 +191,6 @@
         </section>
         <p class="copyright">©2024 Vintélo. Todos os direitos reservados.</p>
     </footer>
+    <script src="/js/busca-global.js"></script>
 </body>
 </html>
