--- a/app/views/pages/categorias.ejs
+++ b/app/views/pages/categorias.ejs
@@ -360,6 +360,7 @@
     <script>
         window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
     </script>
+    <script src="/js/busca-global.js"></script>
     <script src="/js/favoritos-global.js"></script>
     <script src="/js/menu-auth.js"></script>
 </body>
