--- a/app/views/pages/favoritos.ejs
+++ b/app/views/pages/favoritos.ejs
@@ -290,5 +290,6 @@
     </script>
     <script src="/js/favoritos-global.js"></script>
     <script src="js/filtros.js"></script>
+    <script src="/js/busca-global.js"></script>
 </body>
 </html>
