--- a/app/views/pages/homevendedor.ejs
+++ b/app/views/pages/homevendedor.ejs
@@ -540,6 +540,7 @@
 
 <script src="script/dinamicahome.js"></script>
 <script src="js/favoritos.js"></script>
+<script src="/js/busca-global.js"></script>
 </body>
 
 </html>
