--- a/app/views/pages/minhascompras.ejs
+++ b/app/views/pages/minhascompras.ejs
@@ -327,6 +327,7 @@
     </footer>
     
     <script src="script/minhascompras.js"></script>
+    <script src="/js/busca-global.js"></script>
     </body>
     </html>
     
