--- a/app/views/pages/pedidoconf.ejs
+++ b/app/views/pages/pedidoconf.ejs
@@ -45,8 +45,8 @@
                     <img src="imagens/seta.png" alt="Voltar">
                 </a>
                 <h1>Pedido Confirmado</h1>
-                <a href="/homecomprador">
-                    <img src="imagens/casa.png" alt="Home">
+                <a href="/menu">
+                    <img src="imagens/icone sem cadastro.png" alt="Perfil">
                 </a>
             </nav>
         </header>
