--- a/app/views/pages/perfilvender.ejs
+++ b/app/views/pages/perfilvender.ejs
@@ -245,5 +245,6 @@
     </script>
     <script src="/js/favoritos-global.js"></script>
     <script src="/js/carrinho-global.js"></script>
+    <script src="/js/busca-global.js"></script>
 </body>
 </html>
