--- a/app/views/pages/produto.ejs
+++ b/app/views/pages/produto.ejs
@@ -198,5 +198,6 @@
         <% } %>
     </script>
     <script src="/js/produto.js"></script>
+    <script src="/js/busca-global.js"></script>
 </body>
 </html>
