--- a/app/views/pages/homecomprador.ejs
+++ b/app/views/pages/homecomprador.ejs
@@ -553,6 +553,7 @@
 <script>
     window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
 </script>
+<script src="js/busca-global.js"></script>
 <script src="js/favoritos-global.js"></script>
 <script src="script/dinamicahome.js"></script>
 <script src="js/homecomprador.js"></script>
