--- a/app/public/css/finalizandopagamento.css
+++ b/app/public/css/finalizandopagamento.css
@@ -101,8 +101,10 @@ nav a {
 }
 
 .cart-item-img {
-  width: 80px;
+  width: 120px;
+  height: 120px;
   border-radius: 8px;
+  object-fit: cover;
 }
 
 .cart-item-info {
